[package]
name = "blindsort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "0.6.4", features = [
    "boolean",
    "shortint",
    "integer",
    "aarch64-unix",
] }
bincode = "1.3.3"
revolut = { git = "https://github.com/sofianeazogagh/revoLUT" }
# revolut = { path = "../revolut" }
itertools = "0.13.0"
